--- a/src/style.css
+++ b/src/style.css
@@ -5,24 +5,41 @@
   }
 }
 
-#root #main-header {
-  background-color: #00000099 !important;
+#main-header {
+  background-color: #00000099;
   border-bottom: 1px solid #858585;
 }
 
-#root #main-header .container #top-menu > li.menu-item > a {
+#main-header .container #top-menu > li.menu-item > a {
   color: #fff !important;
 }
 
-#root #main-header .container #top-menu .sub-menu li.menu-item a {
+#main-header .container #top-menu .sub-menu li.menu-item a {
   color: #000;
+}
+
+body .mainC .main-content {
+  margin-top: 0;
 }
 
 body .mainC .main-content__top {
   padding-top: 95px;
 }
 
-body .mainC .main-content {
-  margin-top: 0;
+body .mainC.fixedH #main-header {
+  background-color: var(--mainBacground);
+}
+
+body .mainC.fixedH #main-header .container #top-menu > li.menu-item > a {
+  color: #000 !important;
+}
+
+@media (max-width: 1024px) {
+  body .mainC .main-content__top {
+    padding-top: 0;
+  }
+  #main-header .container #top-menu > li.menu-item > a {
+    color: #000 !important;
+  }
 }
 /*# sourceMappingURL=style.css.map */
