--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -11,7 +11,7 @@
       background-size: 100%;
       background-size: cover;
       &__title {
-        padding: 50px 0;
+        padding: 60px 0;
         font-weight: 700;
         font-size: 25px;
         color: var(--mainActiveText);
@@ -71,6 +71,15 @@
     .c2 {
       width: 40%;
       display: inline-block;
+      h1 {
+        font-size: 16px;
+        color: var(--mainActiveBacground);
+        font-weight: 600;
+      }
+      p {
+        margin-bottom: 10px;
+        margin-top: 10px;
+    }
     }
     .aboutDetils {
       width: 100%;
