--- a/src/components/Design/style.scss
+++ b/src/components/Design/style.scss
@@ -19,7 +19,7 @@
         padding: 5px 0px;
       }
       &__title {
-        padding: 50px 0;
+        padding: 60px 0;
         font-weight: 700;
         font-size: 25px;
         color: var(--mainActiveText);
@@ -160,7 +160,13 @@
   opacity: 0.15;
 }
 
-
+@media screen and (max-width: 1023px) {
+  .mainC .main-content .description__row__col2{
+    margin-right: 0;
+    min-width: 100%;
+    width: 100%;
+  }
+}
 
 @-webkit-keyframes fadeInLeft{0%{opacity:0;-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInLeft{0%{opacity:0;-webkit-transform:translate3d(-100%,0,0);transform:translate3d(-100%,0,0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInLeft{-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft}
 @-webkit-keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px,0,0);transform:translate3d(-2000px,0,0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px,0,0);transform:translate3d(-2000px,0,0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInLeftBig{-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig}@-webkit-keyframes fadeInRight{0%{opacity:0;-webkit-transform:translate3d(100%,0,0);transform:translate3d(100%,0,0)}100%{opacity:1;-webkit-transform:none;transform:none}}
