--- a/src/components/Quality/style.scss
+++ b/src/components/Quality/style.scss
@@ -19,7 +19,7 @@
       }
 
       &__title {
-        padding: 50px 0;
+        padding: 60px 0;
         font-weight: 700;
         font-size: 25px;
         color: var(--mainActiveText);
@@ -147,4 +147,12 @@
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 0.15;
+}
+
+@media screen and (max-width: 1023px) {
+  .mainC .main-content .description__row__col2{
+    margin-right: 0;
+    min-width: 100%;
+    width: 100%;
+  }
 }
