--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -25,6 +25,7 @@
       margin-bottom: 50px;
       .details {
         width: 40%;
+
         .location-box {
           margin-bottom: 30px;
           text-align: left;
@@ -42,16 +43,31 @@
       // margin-top: 30px;
       // background-repeat: no-repeat;
       // background-image: url(https://st3.depositphotos.com/1038855/16314/v/450/depositphotos_163145218-stock-illustration-wire-frame-oil-tank.jpg);
-   p {
-    margin-bottom: 20px;
-    margin-top: 30px;
-   }
+      p {
+        margin-bottom: 20px;
+        margin-top: 30px;
+      }
     }
     .c1 {
       width: 60%;
       display: inline-block;
       position: relative;
       float: left;
+      min-height: 200px;
+      .img1 {
+        position: absolute;
+        top: 0;
+        left: 0;
+        border-radius: 10px 10px 10px 10px;
+        box-shadow: 0px 20px 70px 0px #262a4c26;
+      }
+      .img2 {
+        position: absolute;
+        margin-top: 16%;
+        left: 10%;
+        border-radius: 10px 10px 10px 10px;
+        box-shadow: 0px 20px 70px 0px #262a4c26;
+      }
 
       // &:after{
       //   content: "";
@@ -79,12 +95,30 @@
       p {
         margin-bottom: 10px;
         margin-top: 10px;
-    }
+      }
     }
     .aboutDetils {
       width: 100%;
       margin-top: 40px;
+      margin-bottom: 20px;
       float: left;
+      position: relative;
+      padding: 10px 20px;
+      &:after {
+        content: "";
+        position: absolute;
+        background-image: url(https://ninzio.com/byron/wp-content/uploads/2020/08/bg-image-41.png);
+        background-position: bottom center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        opacity: 0.4;
+      }
+
       h1 {
         font-size: 16px;
         color: var(--mainActiveBacground);
