--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -47,7 +47,30 @@
         margin-bottom: 20px;
         margin-top: 30px;
       }
-    }
+      > p {
+        margin-bottom: 40px;
+      }
+      .tit{
+          color:var(--mainActiveBacground);
+          position: relative;
+          text-align: center;
+          margin-top: 20px;
+          font-size: 16px;
+          font-weight: 600;
+          &:after {
+            content: "";
+            position: absolute;
+           
+          
+            left: 50%;
+            bottom: -5px;
+            margin-left: -35px;
+            width: 70px;
+            height: 4px;
+            background-color:var(--mainActiveBacground);
+          }
+        }
+      }
     .c1 {
       width: 60%;
       display: inline-block;
@@ -87,6 +110,10 @@
     .c2 {
       width: 40%;
       display: inline-block;
+      .fa {
+        color: var(--mainActiveBacground);
+        margin-right: 10px;
+      }
       h1 {
         font-size: 16px;
         color: var(--mainActiveBacground);
