--- a/src/components/ManPower/style.css
+++ b/src/components/ManPower/style.css
@@ -116,14 +116,6 @@
   background-color: #f6f6f6;
 }
 
-.mainC .main-content .description__row__col1:nth-child(3), .mainC .main-content .description__row__col1:nth-child(7) {
-  margin-right: 0;
-}
-
-.mainC .main-content .description__row__col1:nth-child(4), .mainC .main-content .description__row__col1:nth-child(5), .mainC .main-content .description__row__col1:nth-child(6), .mainC .main-content .description__row__col1:nth-child(7) {
-  min-width: 20.6%;
-}
-
 .mainC .main-content .description__row__col1 :last-child {
   margin-right: 0;
 }
@@ -136,6 +128,14 @@
 
 .mainC .main-content .description__row .text-center {
   line-height: 1.7em;
+}
+
+.manPower .description__row__col1:nth-child(3), .manPower .description__row__col1:nth-child(7) {
+  margin-right: 0;
+}
+
+.manPower .description__row__col1:nth-child(4), .manPower .description__row__col1:nth-child(5), .manPower .description__row__col1:nth-child(6), .manPower .description__row__col1:nth-child(7) {
+  min-width: 20.6%;
 }
 
 .fixedH .main-content {
