--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -14,7 +14,7 @@
 }
 
 .mainC .main-content__top__title {
-  padding: 50px 0;
+  padding: 60px 0;
   font-weight: 700;
   font-size: 25px;
   color: var(--mainActiveText);
@@ -116,10 +116,6 @@
   background-color: #f6f6f6;
 }
 
-.mainC .main-content .description__row__col2:nth-child(3), .mainC .main-content .description__row__col2:nth-child(6) {
-  margin-right: 0;
-}
-
 .mainC .main-content .description__row__col2 :last-child {
   margin-right: 0;
 }
@@ -132,6 +128,10 @@
 
 .mainC .main-content .description__row .text-center {
   line-height: 1.7em;
+}
+
+.oilGas .description__row__col2:nth-child(3), .oilGas .description__row__col2:nth-child(6) {
+  margin-right: 0 !important;
 }
 
 .fixedH .main-content {
