--- a/src/components/Quality/style.css
+++ b/src/components/Quality/style.css
@@ -116,18 +116,6 @@
   background-color: #f6f6f6;
 }
 
-.mainC .main-content .description__row__col2:nth-child(3), .mainC .main-content .description__row__col2:nth-child(7) {
-  margin-right: 0;
-}
-
-.mainC .main-content .description__row__col2:nth-child(4), .mainC .main-content .description__row__col2:nth-child(5), .mainC .main-content .description__row__col2:nth-child(6), .mainC .main-content .description__row__col2:nth-child(7) {
-  min-width: 20.6%;
-}
-
-.mainC .main-content .description__row__col2 :last-child {
-  margin-right: 0;
-}
-
 .mainC .main-content .description__row__col2 img {
   width: 100%;
   border-top-left-radius: 8px;
@@ -136,6 +124,14 @@
 
 .mainC .main-content .description__row .text-center {
   line-height: 1.7em;
+}
+
+.quality .description__row__col2:nth-child(3), .quality .description__row__col2:nth-child(7) {
+  margin-right: 0;
+}
+
+.quality .description__row__col2:nth-child(4), .quality .description__row__col2:nth-child(5), .quality .description__row__col2:nth-child(6), .quality .description__row__col2:nth-child(7) {
+  min-width: 20.6% !important;
 }
 
 .fixedH .main-content {
