--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,237 +1,2 @@
-.home .max_container {
-  max-width: 1080px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.home .tsparticles-canvas-el:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(51, 49, 58, 0.8);
-  /* background: rgba(51, 49, 58, 0.8); */
-}
-
-.home .tsparticles-canvas-el {
-  -webkit-box-shadow: inset 0 0 0 1000px #0a0a0a8f;
-          box-shadow: inset 0 0 0 1000px #0a0a0a8f;
-}
-
-.home .allElem {
-  position: absolute;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  height: 100vh;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1;
-          flex: 1 1;
-  top: 0;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.home .allElem:after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(51, 49, 58, 0.8);
-}
-
-.home .hero.active .particles-js-canvas-el {
-  display: block;
-}
-
-.home .centered {
-  z-index: 2;
-}
-
-.home .services {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: #fff;
-  z-index: 2;
-  height: 34px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 135px;
-}
-
-.home a {
-  height: 48px;
-  background-color: #ffffff14;
-  margin: 15px 25px;
-  padding: 5px 5px;
-  width: 20%;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-transition: -webkit-transform .5s ease;
-  transition: -webkit-transform .5s ease;
-  transition: transform .5s ease;
-  transition: transform .5s ease, -webkit-transform .5s ease;
-}
-
-.home a:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-  background-color: #ffffff26;
-}
-
-.home .service .title {
-  padding-bottom: 10px;
-  font-weight: 600;
-  letter-spacing: 0.11em;
-  font-size: 12px;
-  padding: 0;
-  margin: 0;
-}
-
-.home .subC {
-  font-size: 13px;
-  font-family: Raleway;
-  color: #ffffff;
-  line-height: 1.14em;
-  letter-spacing: 0.15em;
-  padding-bottom: 10px;
-  display: none;
-}
-
-.home .subC div {
-  padding: 2px 0px;
-  position: relative;
-  margin-left: 15px;
-  display: list-item;
-  /* This has to be "list-item"                                               */
-  list-style-type: disc;
-  /* See https://developer.mozilla.org/en-US/docs/Web/CSS/list-style-type     */
-}
-
-.home .logo {
-  margin: auto;
-  display: block;
-  width: 220px;
-}
-
-@media (max-width: 1170px) {
-  .home .logo {
-    width: 200px;
-  }
-}
-
-.home .title {
-  font-family: Montserrat;
-  color: #ffffff;
-  font-weight: 100;
-  letter-spacing: 0.5em;
-  padding: 0 0 0 0.5em;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 16px;
-  margin-top: 20px;
-}
-
-@media (max-width: 1170px) {
-  .home .title {
-    font-size: 12px;
-    margin-top: 15px;
-  }
-}
-
-.home .heading {
-  margin-top: 80px;
-  color: #ffffff;
-  font-family: Montserrat;
-  font-size: 33px;
-  text-align: center;
-  text-transform: uppercase;
-  letter-spacing: 0.3em;
-  padding: 0 0 0 0.3em;
-  font-weight: 100;
-}
-
-@media (max-width: 1170px) {
-  .home .heading {
-    font-size: 32px;
-    margin-top: 40px;
-  }
-  .home .service {
-    margin: 3px;
-    padding: 0px 2px;
-  }
-  .home .service .title {
-    font-weight: 500;
-    font-size: 9px;
-  }
-}
-
-@media (max-width: 480px) {
-  .home .heading {
-    font-size: 24px;
-  }
-}
-
-.home .description {
-  font-family: Raleway;
-  color: #ffffff;
-  text-align: center;
-  line-height: 2.5em;
-  letter-spacing: 0.15em;
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-@media (max-width: 1170px) {
-  .home .description {
-    font-size: 13px;
-    max-width: 500px;
-  }
-}
-
-@media (max-width: 480px) {
-  .home .description {
-    font-size: 11px;
-    width: 300px;
-  }
-}
-
-.home #tsparticles {
-  height: 100vh;
-  width: 100vw;
-  z-index: 1;
-  position: absolute;
-}
-
-@media (max-width: 1170px) {
-  .home a {
-    margin: 3px;
-    padding: 0px 2px;
-  }
-}
+.home .max_container{max-width:1080px;width:100%;margin:0 auto}.home .tsparticles-canvas-el:after{content:"";position:absolute;top:0;left:0;right:0;bottom:0;background:rgba(51,49,58,0.8)}.home .tsparticles-canvas-el{-webkit-box-shadow:inset 0 0 0 1000px #0a0a0a8f;box-shadow:inset 0 0 0 1000px #0a0a0a8f}.home .allElem{position:absolute;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;height:100vh;-webkit-box-flex:1;-ms-flex:1 1;flex:1 1;top:0;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column}.home .allElem:after{content:"";position:absolute;top:0;left:0;right:0;bottom:0;background:rgba(51,49,58,0.8)}.home .hero.active .particles-js-canvas-el{display:block}.home .centered{z-index:2}.home .services{display:-webkit-box;display:-ms-flexbox;display:flex;color:#fff;z-index:2;height:34px;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;margin-top:135px}.home a{height:48px;background-color:#ffffff14;margin:15px 25px;padding:5px 5px;width:20%;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-transition:-webkit-transform .5s ease;transition:-webkit-transform .5s ease;transition:transform .5s ease;transition:transform .5s ease, -webkit-transform .5s ease}.home a:hover{-webkit-transform:scale(1.3);transform:scale(1.3);background-color:#ffffff26}.home .service .title{padding-bottom:10px;font-weight:600;letter-spacing:0.11em;font-size:12px;padding:0;margin:0}.home .subC{font-size:13px;font-family:Raleway;color:#ffffff;line-height:1.14em;letter-spacing:0.15em;padding-bottom:10px;display:none}.home .subC div{padding:2px 0px;position:relative;margin-left:15px;display:list-item;list-style-type:disc}.home .logo{margin:auto;display:block;width:220px}@media (max-width: 1170px){.home .logo{width:200px}}.home .title{font-family:Montserrat;color:#ffffff;font-weight:100;letter-spacing:0.5em;padding:0 0 0 0.5em;text-align:center;text-transform:uppercase;font-size:16px;margin-top:20px}@media (max-width: 1170px){.home .title{font-size:12px;margin-top:15px}}.home .heading{margin-top:80px;color:#ffffff;font-family:Montserrat;font-size:33px;text-align:center;text-transform:uppercase;letter-spacing:0.3em;padding:0 0 0 0.3em;font-weight:100}@media (max-width: 1170px){.home .heading{font-size:32px;margin-top:40px}.home .service{margin:3px;padding:0px 2px}.home .service .title{font-weight:500;font-size:9px}}@media (max-width: 480px){.home .heading{font-size:24px}}.home .description{font-family:Raleway;color:#ffffff;text-align:center;line-height:2.5em;letter-spacing:0.15em;max-width:600px;margin:0 auto}@media (max-width: 1170px){.home .description{font-size:13px;max-width:500px}}@media (max-width: 480px){.home .description{font-size:11px;width:300px}}.home #tsparticles{height:100vh;width:100vw;z-index:1;position:absolute}@media (max-width: 1170px){.home a{margin:3px;padding:0px 2px}}
 /*# sourceMappingURL=style.css.map */
