--- a/src/style.scss
+++ b/src/style.scss
@@ -30,20 +30,55 @@ body .mainC .main-content {
 }
 
 body .mainC.fixedH {
-  #main-header{
+  #main-header {
     background-color: var(--mainBacground);
     .container #top-menu > li.menu-item > a {
       color: #000 !important;
     }
   }
- 
 }
 
-@media (max-width: 1024px){ 
+@media (max-width: 1024px) {
   body .mainC .main-content__top {
     padding-top: 0;
+  }
+  #main-header .container #top-menu > li.menu-item > a {
+    color: #000 !important;
+  }
 }
-#main-header .container #top-menu > li.menu-item > a{
-  color: #000!important;
+
+.mainC .main-content .description__row > div {
+  transition: all 0.3s ease-out;
+  overflow: hidden;
+  position: relative;
+  img {
+    transition: all 0.3s ease-out;
+  }
 }
+
+.mainC .main-content .description__row > div:hover {
+  transition: all 0.3s ease-out;
+  img {
+    -webkit-transform: scale(1.05) translateZ(0);
+    transform: scale(1.05) translateZ(0);
+    transition: all 0.3s ease-out;
+  }
+}
+
+.mainC .main-content .description__row > div:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: scaleY(0);
+  transform-origin: bottom center;
+  background: blue;
+  z-index: -1;
+  transition: transform 0.3s;
+}
+
+.mainC .main-content .description__row > div:hover::after {
+  transform: scaleY(1);
 }
