--- a/src/style.scss
+++ b/src/style.scss
@@ -65,7 +65,8 @@ body .mainC.fixedH {
   }
 }
 
-.mainC .main-content .description__row > div:after {
+.mainC .main-content .description__row__col2:after,
+.mainC .main-content .description__row__col1:after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -73,12 +74,12 @@ body .mainC.fixedH {
   width: 100%;
   height: 100%;
   transform: scaleY(0);
-  transform-origin: bottom center;
-  background: blue;
-  z-index: -1;
+  transform-origin: center center;
+  background: #00000066;
   transition: transform 0.3s;
 }
 
-.mainC .main-content .description__row > div:hover::after {
+.mainC .main-content .description__row__col2:hover::after,
+.mainC .main-content .description__row__col1:hover::after {
   transform: scaleY(1);
 }
