--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,89 +1,2 @@
-.mainC .projects .main-content__top {
-  background-image: url(https://image.freepik.com/free-photo/drawing-engineer-education-design_151013-4968.jpg);
-  background-position: center;
-  background-size: 100%;
-  background-size: cover;
-}
-
-.projects {
-  margin-top: 97px;
-}
-
-.projects .main-content__top .header-content {
-  padding: 5px 0px;
-}
-
-.projects .main-content__top__title {
-  padding: 60px 0;
-  font-weight: 700;
-  font-size: 25px;
-  color: var(--mainActiveText);
-  -webkit-animation-name: fadeInLeftBig;
-          animation-name: fadeInLeftBig;
-  -webkit-animation-duration: 900ms;
-  animation-duration: 900ms;
-  -webkit-animation-fill-mode: both;
-  animation-fill-mode: both;
-}
-
-.projects .main-content__top__title .description {
-  font-size: 14px;
-  padding-bottom: 10px !important;
-  padding-top: 5px !important;
-  font-weight: 500;
-  -webkit-animation-name: fadeInLeft;
-          animation-name: fadeInLeft;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-}
-
-.projects [data-tab-content] {
-  display: none;
-}
-
-.projects .active[data-tab-content] {
-  display: block;
-}
-
-.projects body {
-  padding: 0;
-  margin: 0;
-}
-
-.projects .tabs {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  border-bottom: 1px solid black;
-}
-
-.projects .tab {
-  cursor: pointer;
-  padding: 10px;
-}
-
-.projects .tab.active {
-  background-color: #CCC;
-}
-
-.projects .tab:hover {
-  background-color: #AAA;
-}
-
-.projects .tab-content {
-  margin-left: 20px;
-  margin-right: 20px;
-}
-
-.projects img {
-  width: 20%;
-  height: auto;
-  display: inline-block;
-  padding: 10px;
-}
+.mainC .projects .main-content__top{background-image:url(https://image.freepik.com/free-photo/drawing-engineer-education-design_151013-4968.jpg);background-position:center;background-size:100%;background-size:cover}.projects{margin-top:97px}.projects .main-content__top .header-content{padding:5px 0px}.projects .main-content__top__title{padding:60px 0;font-weight:700;font-size:25px;color:var(--mainActiveText);-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig;-webkit-animation-duration:900ms;animation-duration:900ms;-webkit-animation-fill-mode:both;animation-fill-mode:both}.projects .main-content__top__title .description{font-size:14px;padding-bottom:10px !important;padding-top:5px !important;font-weight:500;-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft;-webkit-animation-duration:1s;animation-duration:1s}.projects [data-tab-content]{display:none}.projects .active[data-tab-content]{display:block}.projects body{padding:0;margin:0}.projects .centerContent.description{padding-top:30px}.projects .tabs{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-pack:distribute;justify-content:space-around;list-style-type:none;margin:0;padding:0}.projects .tab{cursor:pointer;padding:10px;border-bottom:3px solid var(--mainActiveBacground)}.projects .tab-content{margin-left:20px;margin-right:20px}.projects img{width:25%;height:auto;display:inline-block;padding:10px}
 /*# sourceMappingURL=style.css.map */
