--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -1,6 +1,3 @@
-
-
-
 .mainC .projects .main-content__top {
   background-image: url(https://image.freepik.com/free-photo/drawing-engineer-education-design_151013-4968.jpg);
   background-position: center;
@@ -12,85 +9,74 @@
   background-size: cover;
 }
 
-
-  .projects {
-    margin-top: 97px;
-    .main-content__top {
-      .header-content {
-        padding: 5px 0px;
-      }
-      &__title {
-        padding: 60px 0;
-        font-weight: 700;
-        font-size: 25px;
-        color: var(--mainActiveText);
-        animation-name: fadeInLeftBig;
-        -webkit-animation-duration: 900ms;
-        animation-duration: 900ms;
-        -webkit-animation-fill-mode: both;
-        animation-fill-mode: both;
-        .description {
-          font-size: 14px;
-          padding-bottom: 10px !important;
-          padding-top: 5px !important;
-          font-weight: 500;
-          animation-name: fadeInLeft;
-          -webkit-animation-duration: 1s;
-          animation-duration: 1s;
-        }
+.projects {
+  margin-top: 97px;
+  .main-content__top {
+    .header-content {
+      padding: 5px 0px;
+    }
+    &__title {
+      padding: 60px 0;
+      font-weight: 700;
+      font-size: 25px;
+      color: var(--mainActiveText);
+      animation-name: fadeInLeftBig;
+      -webkit-animation-duration: 900ms;
+      animation-duration: 900ms;
+      -webkit-animation-fill-mode: both;
+      animation-fill-mode: both;
+      .description {
+        font-size: 14px;
+        padding-bottom: 10px !important;
+        padding-top: 5px !important;
+        font-weight: 500;
+        animation-name: fadeInLeft;
+        -webkit-animation-duration: 1s;
+        animation-duration: 1s;
       }
     }
-    [data-tab-content] {
-      display: none;
-    }
-    
-    .active[data-tab-content] {
-      display: block;
-    }
-    
-    body {
-      padding: 0;
-      margin: 0;
-    }
-    
-    .tabs {
-      display: flex;
-      justify-content: space-around;
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      border-bottom: 1px solid black;
-    }
-    
-    .tab {
-      cursor: pointer;
-      padding: 10px;
-    }
-    
-    .tab.active {
-      background-color: #CCC;
-    }
-    
-    .tab:hover {
-      background-color: #AAA;
-    }
-    
-    .tab-content {
-      margin-left: 20px;
-      margin-right: 20px;
-    }
-    
-    
-    
-    img {
-      width: 20%;
-      height: auto;
-      display: inline-block;
-      padding:10px;
-    }
-    
-    
-    
-    
-    
   }
+  [data-tab-content] {
+    display: none;
+  }
+
+  .active[data-tab-content] {
+    display: block;
+  }
+
+  body {
+    padding: 0;
+    margin: 0;
+  }
+  .centerContent.description {
+    padding-top: 30px;
+  }
+  .tabs {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  .tab {
+    cursor: pointer;
+    padding: 10px;
+    &:active,
+    &:hover {
+    }
+    border-bottom: 3px solid var(--mainActiveBacground);
+  }
+
+  .tab-content {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  img {
+    width: 25%;
+    height: auto;
+    display: inline-block;
+    padding: 10px;
+  }
+}
