--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -50,25 +50,6 @@
       > p {
         margin-bottom: 40px;
       }
-      .tit {
-        color: var(--mainActiveBacground);
-        position: relative;
-        text-align: center;
-        margin-top: 20px;
-        font-size: 16px;
-        font-weight: 600;
-        &:after {
-          content: "";
-          position: absolute;
-
-          left: 50%;
-          bottom: -5px;
-          margin-left: -35px;
-          width: 70px;
-          height: 4px;
-          background-color: var(--mainActiveBacground);
-        }
-      }
     }
     .c1 {
       width: 60%;
@@ -133,7 +114,6 @@
       width: 100%;
       margin-top: 40px;
       margin-bottom: 20px;
-      float: left;
       position: relative;
       padding: 10px 20px;
       &:after {
@@ -179,7 +159,27 @@
     width: 100%;
   }
 }
+.about {
+  .tit {
+    color: var(--mainActiveBacground);
+    position: relative;
+    text-align: center;
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    &:after {
+      content: "";
+      position: absolute;
 
+      left: 50%;
+      bottom: -5px;
+      margin-left: -35px;
+      width: 70px;
+      height: 4px;
+      background-color: var(--mainActiveBacground);
+    }
+  }
+}
 @-webkit-keyframes fadeInLeft {
   0% {
     opacity: 0;
