--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -62,10 +62,10 @@
   .tab {
     cursor: pointer;
     padding: 10px;
-    &:active,
+    &.active,
     &:hover {
+      border-bottom: 3px solid var(--mainActiveBacground);
     }
-    border-bottom: 3px solid var(--mainActiveBacground);
   }
 
   .tab-content {
@@ -78,5 +78,35 @@
     height: auto;
     display: inline-block;
     padding: 10px;
+    animation-name: fadeInUp;
+    animation-duration: 1s;
+    animation-fill-mode: both;
+    &:nth-child(1) {
+      animation-duration: 300ms;
+    }
+    &:nth-child(2) {
+      animation-duration: 350ms;
+    }
+    &:nth-child(3) {
+      animation-duration: 400ms;
+    }
+    &:nth-child(4) {
+      animation-duration: 450ms;
+    }
+    &:nth-child(5) {
+      animation-duration: 500ms;
+    }
+    &:nth-child(6) {
+      animation-duration: 550ms;
+    }
+    &:nth-child(7) {
+      animation-duration: 600ms;
+    }
+    &:nth-child(8) {
+      animation-duration: 650ms;
+    }
+    &:nth-child(9) {
+      animation-duration: 700ms;
+    }
   }
 }
