--- a/src/style.scss
+++ b/src/style.scss
@@ -45,8 +45,8 @@
 @-webkit-keyframes fadeInUp {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(-200px, 100%, 0);
+    transform: translate3d(-200px, 100%, 0);
   }
   100% {
     opacity: 1;
@@ -57,9 +57,10 @@
 @keyframes fadeInUp {
   0% {
     opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
+    -webkit-transform: translate3d(-200px, 100%, 0);
+    transform: translate3d(-200px, 100%, 0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: none;
