--- a/src/components/Inspection/style.scss
+++ b/src/components/Inspection/style.scss
@@ -40,6 +40,7 @@
           font-size: 13px;
         }
         .testimonial {
+overflow: initial;
           background-color: var(--mainActiveBacground);
           padding: 30px;
           position: relative;
