--- a/src/components/Inspection/style.css
+++ b/src/components/Inspection/style.css
@@ -43,6 +43,7 @@
 }
 
 .mainC .main-content .description__row .testimonial {
+overflow: initial;
   background-color: var(--mainActiveBacground);
   padding: 30px;
   position: relative;
