--- a/src/components/OilGas/style.scss
+++ b/src/components/OilGas/style.scss
@@ -48,6 +48,7 @@
           padding: 0px 10px;
         }
         .testimonial {
+overflow: initial;
           background-color: var(--mainActiveBacground);
           padding: 30px;
           position: relative;
