--- a/src/components/Welding/style.scss
+++ b/src/components/Welding/style.scss
@@ -44,6 +44,7 @@
           padding: 0px 10px;
         }
         .testimonial {
+overflow: initial;
           background-color: var(--mainActiveBacground);
           padding: 30px;
           position: relative;
