--- a/src/components/Design/style.scss
+++ b/src/components/Design/style.scss
@@ -8,6 +8,11 @@
   background-size: 100%;
   background-size: cover;
 }
+.design {
+  .addShadow {
+    background-color: #0000008c;
+}
+}
 
 .mainC {
   .main-content {
