--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -63,11 +63,13 @@
   list-style-type: none;
   margin: 0;
   padding: 0;
+  margin-bottom: 20px;
 }
 
 .projects .tab {
   cursor: pointer;
-  padding: 10px;
+  padding: 3px;
+  text-transform: uppercase;
 }
 
 .projects .tab.active, .projects .tab:hover {
@@ -79,61 +81,110 @@
   margin-right: 20px;
 }
 
-.projects img {
+.projects .tab-content div div {
   width: 25%;
   height: auto;
   display: inline-block;
-  padding: 10px;
   -webkit-animation-name: fadeInUp;
           animation-name: fadeInUp;
   -webkit-animation-duration: 1s;
           animation-duration: 1s;
   -webkit-animation-fill-mode: both;
           animation-fill-mode: both;
+  position: relative;
+  overflow: hidden;
 }
 
-.projects img:nth-child(1) {
+.projects .tab-content div div:hover h3 {
+  height: auto;
+  z-index: 2;
+}
+
+.projects .tab-content div div:hover :before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.projects .tab-content div div:hover img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  -webkit-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+}
+
+.projects .tab-content div div h3 {
+  float: left;
+  font-size: 18px;
+  text-align: center;
+  background: var(--mainActiveBacground);
+  color: #fff;
+  line-height: 50px;
+  bottom: -60px;
+  font-weight: 500;
+  height: 0;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 0;
+  width: calc(100% - 10px);
+  width: 100%;
+}
+
+.projects .tab-content div div img {
+  padding: 0 5px;
+}
+
+.projects .tab-content div div:nth-child(1) {
   -webkit-animation-duration: 300ms;
           animation-duration: 300ms;
 }
 
-.projects img:nth-child(2) {
+.projects .tab-content div div:nth-child(2) {
   -webkit-animation-duration: 350ms;
           animation-duration: 350ms;
 }
 
-.projects img:nth-child(3) {
+.projects .tab-content div div:nth-child(3) {
   -webkit-animation-duration: 400ms;
           animation-duration: 400ms;
 }
 
-.projects img:nth-child(4) {
+.projects .tab-content div div:nth-child(4) {
   -webkit-animation-duration: 450ms;
           animation-duration: 450ms;
 }
 
-.projects img:nth-child(5) {
+.projects .tab-content div div:nth-child(5) {
   -webkit-animation-duration: 500ms;
           animation-duration: 500ms;
 }
 
-.projects img:nth-child(6) {
+.projects .tab-content div div:nth-child(6) {
   -webkit-animation-duration: 550ms;
           animation-duration: 550ms;
 }
 
-.projects img:nth-child(7) {
+.projects .tab-content div div:nth-child(7) {
   -webkit-animation-duration: 600ms;
           animation-duration: 600ms;
 }
 
-.projects img:nth-child(8) {
+.projects .tab-content div div:nth-child(8) {
   -webkit-animation-duration: 650ms;
           animation-duration: 650ms;
 }
 
-.projects img:nth-child(9) {
+.projects .tab-content div div:nth-child(9) {
   -webkit-animation-duration: 700ms;
           animation-duration: 700ms;
+}
+
+.projects .tab-content div div img {
+  width: 100%;
 }
 /*# sourceMappingURL=style.css.map */
