--- a/src/components/Design/style.css
+++ b/src/components/Design/style.css
@@ -5,6 +5,10 @@
   background-size: cover;
 }
 
+.design .addShadow {
+  background-color: #0000008c;
+}
+
 .mainC .main-content {
   margin-top: 97px;
 }
