--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -1,5 +1,5 @@
 .mainC .oilGas .main-content__top {
-  background-image: url(https://i.imgur.com/3Y9SbQa.jpg);
+  background-image: url(https://i.imgur.com/TcGVOqJ.jpeg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
