--- a/src/components/OilGas/style.scss
+++ b/src/components/OilGas/style.scss
@@ -1,7 +1,7 @@
 
 
 .mainC .oilGas .main-content__top { 
-  background-image: url(https://i.imgur.com/3Y9SbQa.jpg
+  background-image: url(https://i.imgur.com/TcGVOqJ.jpg
   );
   background-position: center;
   -webkit-background-size: 100%;
