--- a/src/components/Contact copy 3/style.css
+++ b/src/components/Contact copy 3/style.css
@@ -1,22 +1,2 @@
-.mainC .main-content {
-  margin-top: 97px;
-}
-
-.mainC .main-content__top {
-  background-image: url(https://us.123rf.com/450wm/krzysztof12/krzysztof121904/krzysztof12190400178/121753166-lights-of-cars-with-night.jpg?ver=6);
-  background-position: center;
-  background-size: 100%;
-  background-size: cover;
-}
-
-.mainC .main-content__top__title {
-  padding: 60px 0;
-  font-weight: 700;
-  font-size: 25px;
-  color: var(--mainActiveText);
-}
-
-.fixedH .main-content {
-  margin-top: 0;
-}
+.mainC .main-content{margin-top:97px}.mainC .main-content__top{background-image:url(https://us.123rf.com/450wm/krzysztof12/krzysztof121904/krzysztof12190400178/121753166-lights-of-cars-with-night.jpg?ver=6);background-position:center;background-size:100%;background-size:cover}.mainC .main-content__top__title{padding:60px 0;font-weight:700;font-size:25px;color:var(--mainActiveText)}.fixedH .main-content{margin-top:0}
 /*# sourceMappingURL=style.css.map */
