--- a/src/components/Contact/style.css
+++ b/src/components/Contact/style.css
@@ -1,320 +1,2 @@
-.mainC .main-content {
-  margin-top: 97px;
-}
-
-.mainC .main-content__top {
-  background-image: url(https://t4.ftcdn.net/jpg/01/98/22/71/240_F_198227156_8dKsEWU8ZeVRSYW7QecJ7KUBr9DXcWLa.jpg);
-  background-position: center;
-  background-size: 100%;
-  background-size: cover;
-}
-
-.mainC .main-content__top__title {
-  padding: 60px 0;
-  font-weight: 700;
-  font-size: 25px;
-  color: var(--mainActiveText);
-}
-
-.mainC .main-content .contact {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  margin-top: 20px;
-  margin-bottom: 50px;
-}
-
-.mainC .main-content .contact .details {
-  width: 40%;
-}
-
-.mainC .main-content .contact .details .location-box {
-  margin-bottom: 30px;
-  text-align: left;
-  padding: 20px 20px 10px 20px;
-  background-color: var(--secondBacground);
-}
-
-.mainC .main-content .contact .map {
-  width: 60%;
-  padding-left: 30px;
-}
-
-.mainC .main-content .who p {
-  margin-bottom: 20px;
-  margin-top: 30px;
-}
-
-.mainC .main-content .who > p {
-  margin-bottom: 40px;
-}
-
-.mainC .main-content .c1 {
-  width: 60%;
-  display: inline-block;
-  position: relative;
-  float: left;
-  min-height: 200px;
-}
-
-.mainC .main-content .c1 .img1 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  border-radius: 10px 10px 10px 10px;
-  -webkit-box-shadow: 0px 20px 70px 0px #262a4c26;
-          box-shadow: 0px 20px 70px 0px #262a4c26;
-  -webkit-animation-name: fadeInLeftBig;
-          animation-name: fadeInLeftBig;
-  -webkit-animation-duration: 900ms;
-          animation-duration: 900ms;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-}
-
-.mainC .main-content .c1 .img2 {
-  position: absolute;
-  margin-top: 16%;
-  left: 10%;
-  border-radius: 10px 10px 10px 10px;
-  -webkit-box-shadow: 0px 20px 70px 0px #262a4c26;
-          box-shadow: 0px 20px 70px 0px #262a4c26;
-  -webkit-animation-name: fadeInUp;
-          animation-name: fadeInUp;
-  -webkit-animation-duration: 1000ms;
-          animation-duration: 1000ms;
-  -webkit-animation-fill-mode: both;
-          animation-fill-mode: both;
-}
-
-.mainC .main-content .c1 img {
-  width: 80%;
-  height: auto;
-}
-
-.mainC .main-content .c2 {
-  width: 40%;
-  display: inline-block;
-}
-
-.mainC .main-content .c2 .fa {
-  color: var(--mainActiveBacground);
-  margin-right: 10px;
-}
-
-.mainC .main-content .c2 h1 {
-  font-size: 16px;
-  color: var(--mainActiveBacground);
-  font-weight: 600;
-}
-
-.mainC .main-content .c2 p {
-  margin-bottom: 10px;
-  margin-top: 10px;
-}
-
-.mainC .main-content .aboutDetils {
-  width: 100%;
-  margin-top: 40px;
-  margin-bottom: 20px;
-  position: relative;
-  padding: 10px 20px;
-}
-
-.mainC .main-content .aboutDetils:after {
-  content: "";
-  position: absolute;
-  background-image: url(https://ninzio.com/byron/wp-content/uploads/2020/08/bg-image-41.png);
-  background-position: bottom center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  opacity: 0.4;
-}
-
-.mainC .main-content .aboutDetils h1 {
-  font-size: 16px;
-  color: var(--mainActiveBacground);
-  font-weight: 600;
-}
-
-.fixedH .main-content {
-  margin-top: 0;
-}
-
-.mapouter {
-  position: relative;
-  text-align: right;
-  width: 100%;
-  height: 390px;
-}
-
-.gmap_canvas {
-  overflow: hidden;
-  background: none !important;
-  height: 342px;
-}
-
-.gmap_canvas iframe {
-  width: 100%;
-}
-
-.about .tit {
-  color: var(--mainActiveBacground);
-  position: relative;
-  text-align: center;
-  margin-top: 20px;
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.about .tit:after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  bottom: -5px;
-  margin-left: -35px;
-  width: 70px;
-  height: 4px;
-  background-color: var(--mainActiveBacground);
-}
-
-@-webkit-keyframes fadeInLeft {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInLeft {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInLeft {
-  -webkit-animation-name: fadeInLeft;
-  animation-name: fadeInLeft;
-}
-
-@-webkit-keyframes fadeInLeftBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-2000px, 0, 0);
-    transform: translate3d(-2000px, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInLeftBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(-2000px, 0, 0);
-    transform: translate3d(-2000px, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInLeftBig {
-  -webkit-animation-name: fadeInLeftBig;
-  animation-name: fadeInLeftBig;
-}
-
-@-webkit-keyframes fadeInRight {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(100%, 0, 0);
-    transform: translate3d(100%, 0, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@-webkit-keyframes fadeInUp {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInUp {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 100%, 0);
-    transform: translate3d(0, 100%, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-.fadeInUp {
-  -webkit-animation-name: fadeInUp;
-  animation-name: fadeInUp;
-}
-
-@-webkit-keyframes fadeInUpBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
-
-@keyframes fadeInUpBig {
-  0% {
-    opacity: 0;
-    -webkit-transform: translate3d(0, 2000px, 0);
-    transform: translate3d(0, 2000px, 0);
-  }
-  100% {
-    opacity: 1;
-    -webkit-transform: none;
-    transform: none;
-  }
-}
+.mainC .main-content{margin-top:97px}.mainC .main-content__top{background-image:url(https://t4.ftcdn.net/jpg/01/98/22/71/240_F_198227156_8dKsEWU8ZeVRSYW7QecJ7KUBr9DXcWLa.jpg);background-position:center;background-size:100%;background-size:cover}.mainC .main-content__top__title{padding:60px 0;font-weight:700;font-size:25px;color:var(--mainActiveText)}.mainC .main-content .contact{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;margin-top:20px;margin-bottom:50px}.mainC .main-content .contact .details{width:40%}.mainC .main-content .contact .details .location-box{margin-bottom:30px;text-align:left;padding:20px 20px 10px 20px;background-color:var(--secondBacground)}.mainC .main-content .contact .map{width:60%;padding-left:30px}.mainC .main-content .who p{margin-bottom:20px;margin-top:30px}.mainC .main-content .who>p{margin-bottom:40px}.mainC .main-content .c1{width:60%;display:inline-block;position:relative;float:left;min-height:200px}.mainC .main-content .c1 .img1{position:absolute;top:0;left:0;border-radius:10px 10px 10px 10px;-webkit-box-shadow:0px 20px 70px 0px #262a4c26;box-shadow:0px 20px 70px 0px #262a4c26;-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig;-webkit-animation-duration:900ms;animation-duration:900ms;-webkit-animation-fill-mode:both;animation-fill-mode:both}.mainC .main-content .c1 .img2{position:absolute;margin-top:16%;left:10%;border-radius:10px 10px 10px 10px;-webkit-box-shadow:0px 20px 70px 0px #262a4c26;box-shadow:0px 20px 70px 0px #262a4c26;-webkit-animation-name:fadeInUp;animation-name:fadeInUp;-webkit-animation-duration:1000ms;animation-duration:1000ms;-webkit-animation-fill-mode:both;animation-fill-mode:both}.mainC .main-content .c1 img{width:80%;height:auto}.mainC .main-content .c2{width:40%;display:inline-block}.mainC .main-content .c2 .fa{color:var(--mainActiveBacground);margin-right:10px}.mainC .main-content .c2 h1{font-size:16px;color:var(--mainActiveBacground);font-weight:600}.mainC .main-content .c2 p{margin-bottom:10px;margin-top:10px}.mainC .main-content .aboutDetils{width:100%;margin-top:40px;margin-bottom:20px;position:relative;padding:10px 20px}.mainC .main-content .aboutDetils:after{content:"";position:absolute;background-image:url(https://ninzio.com/byron/wp-content/uploads/2020/08/bg-image-41.png);background-position:bottom center;background-repeat:no-repeat;background-size:cover;bottom:0;right:0;width:100%;height:100%;z-index:-1;opacity:0.4}.mainC .main-content .aboutDetils h1{font-size:16px;color:var(--mainActiveBacground);font-weight:600}.fixedH .main-content{margin-top:0}.mapouter{position:relative;text-align:right;width:100%;height:390px}.gmap_canvas{overflow:hidden;background:none !important;height:342px}.gmap_canvas iframe{width:100%}.about .tit{color:var(--mainActiveBacground);position:relative;text-align:center;margin-top:20px;font-size:18px;font-weight:600}.about .tit:after{content:"";position:absolute;left:50%;bottom:-5px;margin-left:-35px;width:70px;height:4px;background-color:var(--mainActiveBacground)}@-webkit-keyframes fadeInLeft{0%{opacity:0;-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInLeft{0%{opacity:0;-webkit-transform:translate3d(-100%, 0, 0);transform:translate3d(-100%, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInLeft{-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft}@-webkit-keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px, 0, 0);transform:translate3d(-2000px, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInLeftBig{0%{opacity:0;-webkit-transform:translate3d(-2000px, 0, 0);transform:translate3d(-2000px, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInLeftBig{-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig}@-webkit-keyframes fadeInRight{0%{opacity:0;-webkit-transform:translate3d(100%, 0, 0);transform:translate3d(100%, 0, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@-webkit-keyframes fadeInUp{0%{opacity:0;-webkit-transform:translate3d(0, 100%, 0);transform:translate3d(0, 100%, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInUp{0%{opacity:0;-webkit-transform:translate3d(0, 100%, 0);transform:translate3d(0, 100%, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}.fadeInUp{-webkit-animation-name:fadeInUp;animation-name:fadeInUp}@-webkit-keyframes fadeInUpBig{0%{opacity:0;-webkit-transform:translate3d(0, 2000px, 0);transform:translate3d(0, 2000px, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@keyframes fadeInUpBig{0%{opacity:0;-webkit-transform:translate3d(0, 2000px, 0);transform:translate3d(0, 2000px, 0)}100%{opacity:1;-webkit-transform:none;transform:none}}@media (max-width: 1024px){.mainC .main-content .c1{width:100%}.mainC .main-content .c2{width:100%}.mainC .main-content .aboutDetils{width:100%;margin-top:0;margin-bottom:10px;padding:0px 5px}.mainC .main-content .contact{display:block}.mainC .main-content .contact .location-box{margin-bottom:10px !important}.mainC .main-content .details,.mainC .main-content .map{width:100% !important;padding-left:0 !important}}
 /*# sourceMappingURL=style.css.map */
