--- a/src/components/Quality/style.css
+++ b/src/components/Quality/style.css
@@ -1,171 +1,2 @@
-.quality .main-content__top {
-  background-image: url(http://st2.depositphotos.com/1579454/9602/i/600/depositphotos_96020930-stock-photo-customer-service-concept.jpg);
-  background-position: center;
-  background-size: 100%;
-  background-size: cover;
-}
-
-.mainC .main-content {
-  margin-top: 97px;
-}
-
-.mainC .main-content__top .header-content {
-  padding: 5px 0px;
-}
-
-.mainC .main-content__top__title {
-  padding: 60px 0;
-  font-weight: 700;
-  font-size: 25px;
-  color: var(--mainActiveText);
-}
-
-.mainC .main-content__top__title .description {
-  font-size: 14px;
-  padding-bottom: 10px !important;
-  padding-top: 5px !important;
-  font-weight: 500;
-}
-
-.mainC .main-content .description {
-  padding: 15px 0;
-}
-
-.mainC .main-content .description__row {
-  padding: 15px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-.mainC .main-content .description__row:nth-child(3) {
-  padding-top: 25px;
-}
-
-.mainC .main-content .description__row p {
-  font-size: 13px;
-  padding: 0px 10px;
-}
-
-.mainC .main-content .description__row .testimonial {
-overflow: initial;
-  background-color: var(--mainActiveBacground);
-  padding: 30px;
-  position: relative;
-  width: 100%;
-}
-
-.mainC .main-content .description__row .testimonial:after {
-  position: absolute;
-  z-index: 2;
-  top: -16px;
-  left: 50%;
-  margin-left: -16px;
-  border-radius: 31px;
-  background: #f5f5f5;
-  font-size: 32px;
-  content: "\7c";
-  text-shadow: 0 0;
-  font-family: ETmodules !important;
-  font-weight: 400;
-  font-style: normal;
-  font-variant: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  line-height: 1;
-  text-transform: none;
-  speak: none;
-  color: var(--mainActiveBacground);
-}
-
-.mainC .main-content .description__row .testimonial h3 {
-  color: var(--mainActiveText);
-  font-size: 22px;
-}
-
-.mainC .main-content .description__row .testimonial p {
-  color: var(--mainActiveText);
-}
-
-.mainC .main-content .description__row h3 {
-  font-size: 16px;
-  margin-bottom: 0;
-  text-align: center;
-  padding: 15px 10px;
-  color: var(--mainActiveBacground);
-}
-
-.mainC .main-content .description__row__col2 {
-  margin-right: 5.5%;
-  min-width: 29.6%;
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-shadow: 0px 20px 70px 0px #262a4c26;
-          box-shadow: 0px 20px 70px 0px #262a4c26;
-  border-radius: 8px;
-  margin-bottom: 5.5%;
-  background-color: #f6f6f6;
-}
-
-.mainC .main-content .description__row__col2 img {
-  width: 100%;
-  border-top-left-radius: 8px;
-  border-top-right-radius: 8px;
-}
-
-.mainC .main-content .description__row .text-center {
-  line-height: 1.7em;
-}
-
-.quality .description__row__col2:nth-child(3), .quality .description__row__col2:nth-child(7) {
-  margin-right: 0;
-}
-
-.quality .description__row__col2:nth-child(4), .quality .description__row__col2:nth-child(5), .quality .description__row__col2:nth-child(6), .quality .description__row__col2:nth-child(7) {
-  min-width: 20.6% !important;
-}
-
-.fixedH .main-content {
-  margin-top: 0;
-}
-
-.main-content.quality.design {
-  position: relative;
-}
-
-.main-content.quality.design .addShadow {
-  background-color: rgba(0, 0, 0, 0.6);
-}
-
-.main-content.quality.design:after {
-  content: "";
-  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
-  background-position: center bottom;
-  position: fixed;
-  bottom: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-repeat: no-repeat;
-  background-size: cover;
-  opacity: 0.15;
-}
-
-@media screen and (max-width: 1023px) {
-  .mainC .main-content .description__row__col2 {
-    margin-right: 0;
-    min-width: 100%;
-    width: 100%;
-  }
-}
+.quality .main-content__top{background-image:url(http://st2.depositphotos.com/1579454/9602/i/600/depositphotos_96020930-stock-photo-customer-service-concept.jpg);background-position:center;background-size:100%;background-size:cover}.mainC .main-content{margin-top:97px}.mainC .main-content__top .header-content{padding:5px 0px}.mainC .main-content__top__title{padding:60px 0;font-weight:700;font-size:25px;color:var(--mainActiveText)}.mainC .main-content__top__title .description{font-size:14px;padding-bottom:10px !important;padding-top:5px !important;font-weight:500}.mainC .main-content .description{padding:15px 0}.mainC .main-content .description__row{padding:15px 0;display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-wrap:wrap;flex-wrap:wrap}.mainC .main-content .description__row:nth-child(3){padding-top:25px}.mainC .main-content .description__row p{font-size:13px;padding:0px 10px}.mainC .main-content .description__row .testimonial{overflow:initial;background-color:var(--mainActiveBacground);padding:30px;position:relative;width:100%}.mainC .main-content .description__row .testimonial:after{position:absolute;z-index:2;top:-16px;left:50%;margin-left:-16px;border-radius:31px;background:#f5f5f5;font-size:32px;content:"\7c";text-shadow:0 0;font-family:ETmodules !important;font-weight:400;font-style:normal;font-variant:normal;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;line-height:1;text-transform:none;speak:none;color:var(--mainActiveBacground)}.mainC .main-content .description__row .testimonial h3{color:var(--mainActiveText);font-size:22px}.mainC .main-content .description__row .testimonial p{color:var(--mainActiveText)}.mainC .main-content .description__row h3{font-size:16px;margin-bottom:0;text-align:center;padding:15px 10px;color:var(--mainActiveBacground)}.mainC .main-content .description__row__col2{margin-right:5.5%;min-width:29.6%;width:-webkit-min-content;width:-moz-min-content;width:min-content;display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-orient:vertical;-webkit-box-direction:normal;-ms-flex-direction:column;flex-direction:column;-webkit-box-shadow:0px 20px 70px 0px #262a4c26;box-shadow:0px 20px 70px 0px #262a4c26;border-radius:8px;margin-bottom:5.5%;background-color:#f6f6f6}.mainC .main-content .description__row__col2 img{width:100%;border-top-left-radius:8px;border-top-right-radius:8px}.mainC .main-content .description__row .text-center{line-height:1.7em}.quality .description__row__col2:nth-child(3),.quality .description__row__col2:nth-child(7){margin-right:0}.quality .description__row__col2:nth-child(4),.quality .description__row__col2:nth-child(5),.quality .description__row__col2:nth-child(6),.quality .description__row__col2:nth-child(7){min-width:20.6% !important}.fixedH .main-content{margin-top:0}.main-content.quality.design{position:relative}.main-content.quality.design .addShadow{background-color:rgba(0,0,0,0.6)}.main-content.quality.design:after{content:"";background-image:url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);background-position:center bottom;position:fixed;bottom:0px;width:100%;height:100%;z-index:-1;background-repeat:no-repeat;background-size:cover;opacity:0.15}@media screen and (max-width: 1023px){.mainC .main-content .description__row__col2{margin-right:0;min-width:100%;width:100%}}
 /*# sourceMappingURL=style.css.map */
