--- a/src/style.scss
+++ b/src/style.scss
@@ -105,6 +105,9 @@
           margin-right: 0;
           min-width: 100%;
         }
+        .testimonial {
+          padding: 5px;
+        }
       }
     }
   }
