--- a/src/shared-components/Header/style.scss
+++ b/src/shared-components/Header/style.scss
@@ -39,7 +39,7 @@
         padding-bottom: 40px;
         padding-top: 40px;
         a:after {
-          content: '';
+          content: "";
           position: absolute;
           bottom: 0;
           left: 50%;
@@ -55,15 +55,14 @@
           transition: 0.5s;
           width: 0;
           bottom: -3px;
-      }
-        &:hover{
-          >a {
-            &::after{
+        }
+        &:hover {
+          > a {
+            &::after {
               background-color: var(--mainActiveBacground);
               width: 100%;
             }
           }
-         
         }
       }
       #top-menu li {
@@ -94,7 +93,7 @@
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             position: absolute;
             padding: 20px 0;
-            margin-top: 40px;
+            margin-top: 37px;
             &.sub-menu {
               li {
                 margin: 0;
@@ -115,6 +114,8 @@
         li:hover > ul {
           visibility: visible;
           opacity: 1;
+          animation-name: fadeInTop;
+          animation-duration: 500ms;
         }
       }
     }
@@ -131,77 +132,76 @@
   }
 }
 
-
 @media screen and (max-width: 1023px) {
   #top-menu-nav {
     display: none;
   }
   .mainC .main-content {
     margin-top: 60px;
-}
+  }
 
   #root #main-header .container {
     height: 60px;
-}
-.mobile_nav {
-  position: relative;
-  span {
-    i {
-      font-size: 22px;
-      color: var(--mainActiveBacground);
-    }
   }
-  &.closed {
-    #top-menu {
-      display: none;
-    }
-  }
-  #top-menu {
-    flex-direction: column;
-    visibility: visible;
-    position: fixed;
-    z-index: 9999;
-    left: 0;
-    width: 96%;
-    left: 2%;
-    padding: 5%;
-    opacity: 1;
-    background: #fff;
-    top:61px;
-    box-shadow: 0 2px 5px #0000001a;
-    > li {
-      padding-bottom: 0px!important;
-      padding-top: 0px!important;
-
-      > ul {
-        padding: 0px 0px!important;
-        position: relative!important;
-        visibility: visible!important;
-        opacity: 1!important;
-        box-shadow: none!important;
-        margin-top: 0!important;
+  .mobile_nav {
+    position: relative;
+    span {
+      i {
+        font-size: 22px;
+        color: var(--mainActiveBacground);
       }
-  a {
-    display: block;
-    padding: 10px 5%;
-    border-bottom: 1px solid rgba(0,0,0,.03);
-    &.hasCh{
-      background-color: rgba(0,0,0,.03);
+    }
+    &.closed {
+      #top-menu {
+        display: none;
+      }
+    }
+    #top-menu {
+      flex-direction: column;
+      visibility: visible;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      width: 96%;
+      left: 2%;
+      padding: 5%;
+      opacity: 1;
+      background: #fff;
+      top: 61px;
+      box-shadow: 0 2px 5px #0000001a;
+      > li {
+        padding-bottom: 0px !important;
+        padding-top: 0px !important;
+
+        > ul {
+          padding: 0px 0px !important;
+          position: relative !important;
+          visibility: visible !important;
+          opacity: 1 !important;
+          box-shadow: none !important;
+          margin-top: 0 !important;
+        }
+        a {
+          display: block;
+          padding: 10px 5%;
+          border-bottom: 1px solid rgba(0, 0, 0, 0.03);
+          &.hasCh {
+            background-color: rgba(0, 0, 0, 0.03);
+          }
+        }
+      }
     }
   }
+  body .mainC .main-content {
+    margin-top: 61px;
+    &__top__title {
+      padding: 20px 0;
+      font-size: 22px;
+      .description {
+        font-size: 13px;
+      }
     }
   }
-}
-body .mainC .main-content {
-  margin-top: 61px;
-  &__top__title {
-    padding: 20px 0;
-    font-size: 22px;
-    .description {
-      font-size: 13px;
-    }
-}
-}
 }
 
 @media screen and (min-width: 1024px) {
