--- a/src/style.scss
+++ b/src/style.scss
@@ -54,6 +54,22 @@
     transform: none;
   }
 }
+
+@keyframes fadeInTop {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -20%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+.fadeInTop {
+  -webkit-animation-name: fadeInTop;
+  animation-name: fadeInTop;
+}
+
 @keyframes fadeInUp {
   0% {
     opacity: 0;
