--- a/src/components/Quality/style.css
+++ b/src/components/Quality/style.css
@@ -1,5 +1,5 @@
 .quality .main-content__top {
-  background-image: url(http://st2.depositphotos.com/1579454/9602/i/600/depositphotos_96020930-stock-photo-customer-service-concept.jpg);
+  background-image: url(https://t4.ftcdn.net/jpg/02/80/86/03/240_F_280860342_3PTQVC3VubEJN1xC4trD17gpnOcHZGWS.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
