--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,2 +1,193 @@
-.mainC .projects .main-content__top{background-image:url(https://image.freepik.com/free-photo/drawing-engineer-education-design_151013-4968.jpg);background-position:center;background-size:100%;background-size:cover}.projects{margin-top:97px}.projects .main-content__top .header-content{padding:5px 0px}.projects .main-content__top__title{padding:60px 0;font-weight:700;font-size:25px;color:var(--mainActiveText);-webkit-animation-name:fadeInLeftBig;animation-name:fadeInLeftBig;-webkit-animation-duration:900ms;animation-duration:900ms;-webkit-animation-fill-mode:both;animation-fill-mode:both}.projects .main-content__top__title .description{font-size:14px;padding-bottom:10px !important;padding-top:5px !important;font-weight:500;-webkit-animation-name:fadeInLeft;animation-name:fadeInLeft;-webkit-animation-duration:1s;animation-duration:1s}.projects [data-tab-content]{display:none}.projects .active[data-tab-content]{display:block}.projects body{padding:0;margin:0}.projects .centerContent.description{padding-top:30px}.projects .tabs{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-pack:distribute;justify-content:space-around;list-style-type:none;margin:0;padding:0;margin-bottom:20px}.projects .tab{cursor:pointer;padding:3px;text-transform:uppercase}.projects .tab.active,.projects .tab:hover{border-bottom:3px solid var(--mainActiveBacground)}.projects .tab-content{margin-left:20px;margin-right:20px}.projects .tab-content div.tabss div.tabss__single{width:25%;height:auto;display:inline-block;position:relative;overflow:hidden}.projects .tab-content div.tabss div.tabss__single:hover h3{height:auto;z-index:2;-webkit-animation-name:fadeInTop;animation-name:fadeInTop;-webkit-animation-duration:500ms;animation-duration:500ms}.projects .tab-content div.tabss div.tabss__single:hover :before{content:"";width:100%;height:100%;background:rgba(0,0,0,0.2);position:absolute;left:0;top:0;z-index:1}.projects .tab-content div.tabss div.tabss__single:hover img{-webkit-transform:scale(1.2);transform:scale(1.2);-webkit-transition:all 0.8s ease;transition:all 0.8s ease}.projects .tab-content div.tabss div.tabss__single h3{float:left;font-size:14px;text-align:center;background:var(--mainActiveBacground);text-transform:uppercase;color:#fff;line-height:30px;bottom:-60px;font-weight:500;height:0;position:absolute;bottom:0;margin-bottom:0;width:calc(100% - 10px);width:100%}.projects .tab-content div.tabss div.tabss__single img{padding:0 5px;-webkit-animation-name:fadeInUp;animation-name:fadeInUp;-webkit-animation-duration:1s;animation-duration:1s}.projects .tab-content div.tabss div.tabss__single img:nth-child(1){-webkit-animation-duration:300ms;animation-duration:300ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(2){-webkit-animation-duration:350ms;animation-duration:350ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(3){-webkit-animation-duration:400ms;animation-duration:400ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(4){-webkit-animation-duration:450ms;animation-duration:450ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(5){-webkit-animation-duration:500ms;animation-duration:500ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(6){-webkit-animation-duration:550ms;animation-duration:550ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(7){-webkit-animation-duration:600ms;animation-duration:600ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(8){-webkit-animation-duration:650ms;animation-duration:650ms}.projects .tab-content div.tabss div.tabss__single img:nth-child(9){-webkit-animation-duration:700ms;animation-duration:700ms}.projects .tab-content div.tabss div.tabss__single img{width:100%}
+.mainC .projects .main-content__top {
+  background-image: url(https://image.freepik.com/free-photo/drawing-engineer-education-design_151013-4968.jpg);
+  background-position: center;
+  background-size: 100%;
+  background-size: cover;
+}
+
+.projects {
+  margin-top: 97px;
+}
+
+.projects .main-content__top .header-content {
+  padding: 5px 0px;
+}
+
+.projects .main-content__top__title {
+  padding: 60px 0;
+  font-weight: 700;
+  font-size: 25px;
+  color: var(--mainActiveText);
+  -webkit-animation-name: fadeInLeftBig;
+          animation-name: fadeInLeftBig;
+  -webkit-animation-duration: 900ms;
+  animation-duration: 900ms;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+.projects .main-content__top__title .description {
+  font-size: 14px;
+  padding-bottom: 10px !important;
+  padding-top: 5px !important;
+  font-weight: 500;
+  -webkit-animation-name: fadeInLeft;
+          animation-name: fadeInLeft;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.projects [data-tab-content] {
+  display: none;
+}
+
+.projects .active[data-tab-content] {
+  display: block;
+}
+
+.projects body {
+  padding: 0;
+  margin: 0;
+}
+
+.projects .centerContent.description {
+  padding-top: 30px;
+}
+
+.projects .tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 20px;
+}
+
+.projects .tab {
+  cursor: pointer;
+  padding: 3px;
+  text-transform: uppercase;
+}
+
+.projects .tab.active, .projects .tab:hover {
+  border-bottom: 3px solid var(--mainActiveBacground);
+}
+
+.projects .tab-content {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.projects .tab-content div.tabss div.tabss__single {
+  width: 25%;
+  height: auto;
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+}
+
+.projects .tab-content div.tabss div.tabss__single:hover h3 {
+  height: auto;
+  z-index: 2;
+  -webkit-animation-name: fadeInTop;
+          animation-name: fadeInTop;
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single:hover :before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.projects .tab-content div.tabss div.tabss__single:hover img {
+  -webkit-transform: scale(1.2);
+  transform: scale(1.2);
+  -webkit-transition: all 0.8s ease;
+  transition: all 0.8s ease;
+}
+
+.projects .tab-content div.tabss div.tabss__single h3 {
+  float: left;
+  font-size: 14px;
+  text-align: center;
+  background: var(--mainActiveBacground);
+  text-transform: uppercase;
+  color: #fff;
+  line-height: 30px;
+  bottom: -60px;
+  font-weight: 500;
+  height: 0;
+  position: absolute;
+  bottom: 0;
+  margin-bottom: 0;
+  width: calc(100% - 10px);
+  width: 100%;
+}
+
+.projects .tab-content div.tabss div.tabss__single img {
+  padding: 0 5px;
+  -webkit-animation-name: fadeInUp;
+          animation-name: fadeInUp;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(1) {
+  -webkit-animation-duration: 300ms;
+          animation-duration: 300ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(2) {
+  -webkit-animation-duration: 350ms;
+          animation-duration: 350ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(3) {
+  -webkit-animation-duration: 400ms;
+          animation-duration: 400ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(4) {
+  -webkit-animation-duration: 450ms;
+          animation-duration: 450ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(5) {
+  -webkit-animation-duration: 500ms;
+          animation-duration: 500ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(6) {
+  -webkit-animation-duration: 550ms;
+          animation-duration: 550ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(7) {
+  -webkit-animation-duration: 600ms;
+          animation-duration: 600ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(8) {
+  -webkit-animation-duration: 650ms;
+          animation-duration: 650ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img:nth-child(9) {
+  -webkit-animation-duration: 700ms;
+          animation-duration: 700ms;
+}
+
+.projects .tab-content div.tabss div.tabss__single img {
+  width: 100%;
+}
 /*# sourceMappingURL=style.css.map */
