--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -51,6 +51,9 @@
         margin-bottom: 40px;
       }
     }
+    .det {
+      display: flex;
+    }
     .c1 {
       width: 60%;
       display: inline-block;
@@ -68,7 +71,7 @@
         animation-fill-mode: both;
       }
       .img2 {
-        position: absolute;
+        position: relative;
         margin-top: 16%;
         left: 10%;
         border-radius: 10px 10px 10px 10px;
@@ -116,6 +119,9 @@
       margin-bottom: 20px;
       position: relative;
       padding: 10px 20px;
+      &__detail {
+        margin: 15px 0px 15px 0px;
+      }
       &:after {
         content: "";
         position: absolute;
@@ -135,6 +141,7 @@
         font-size: 16px;
         color: var(--mainActiveBacground);
         font-weight: 600;
+        margin-block-end: 5px;
       }
     }
   }
