--- a/src/components/ManPower/style.scss
+++ b/src/components/ManPower/style.scss
@@ -125,6 +125,12 @@ overflow: initial;
 .manPower {
   .description {
     &__row {
+      p {
+        li {
+          list-style: none;
+          padding-bottom: 5px;
+        }
+      }
       &__col1 {
         &:nth-child(3), &:nth-child(7) {
           margin-right: 0;
