--- a/src/components/OilGas/style.scss
+++ b/src/components/OilGas/style.scss
@@ -1,8 +1,7 @@
 
 
 .mainC .oilGas .main-content__top { 
-  background-image: url(https://i.imgur.com/TcGVOqJ.jpg
-  );
+  background-image: url(../../assets/images/oilBanner.jpg);
   background-position: center;
   -webkit-background-size: 100%;
   -webkit-background-size: cover;
