--- a/src/components/Welding/style.scss
+++ b/src/components/Welding/style.scss
@@ -1,5 +1,5 @@
 .mainC .welding .main-content__top {
-  background-image: url(https://i.imgur.com/UrCUxgy.jpeg);
+  background-image: url(../../assets/images/weldingBanner.jpeg);
   background-position: center;
   -webkit-background-size: 100%;
   -webkit-background-size: cover;
