--- a/src/components/Design/style.css
+++ b/src/components/Design/style.css
@@ -1,5 +1,5 @@
 .mainC .design .main-content__top {
-  background-image: url(https://i.imgur.com/Wtq0XF7.jpg);
+  background-image: url(../../assets/images/designBanner.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
