--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -1,5 +1,5 @@
 .mainC .oilGas .main-content__top {
-  background-image: url(https://i.imgur.com/TcGVOqJ.jpg);
+  background-image: url(../../assets/images/oilBanner.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
