--- a/src/components/ManPower/style.css
+++ b/src/components/ManPower/style.css
@@ -1,5 +1,5 @@
 .mainC .manPower .main-content__top {
-  background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
+  background-image: url(../../assets/images/powerBanner.jpg);
   background-position: center;
   background-size: 100%;
   background-size: cover;
@@ -158,7 +158,7 @@
 
 .main-content.manPower:after {
   content: "";
-  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
+  background-image: url(../../assets/images/backgroundI.jpg);
   background-position: center bottom;
   position: fixed;
   bottom: 0px;
