--- a/src/components/OilGas/style.css
+++ b/src/components/OilGas/style.css
@@ -149,7 +149,7 @@
 
 .main-content.quality.design:after {
   content: "";
-  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
+  background-image: url(../../assets/images/backgroundI.jpg);
   background-position: center bottom;
   position: fixed;
   bottom: 0px;
