--- a/src/components/ManPower/style.scss
+++ b/src/components/ManPower/style.scss
@@ -1,6 +1,6 @@
 
 .mainC .manPower .main-content__top {
-  background-image: url(https://www.evaluationz.com/wp-content/uploads/2013/01/services-banner.jpg);
+  background-image: url(../../assets/images/powerBanner.jpg);
   background-position: center;
   -webkit-background-size: 100%;
   -webkit-background-size: cover;
@@ -159,7 +159,7 @@ overflow: initial;
 
 .main-content.manPower:after {
   content: "";
-  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
+  background-image: url(../../assets/images/backgroundI.jpg);
   background-position: center bottom;
   position: fixed;
   bottom: 0px;
