--- a/src/components/Design/style.css
+++ b/src/components/Design/style.css
@@ -161,15 +161,15 @@
   margin-top: 0;
 }
 
-.main-content.quality.design {
+.main-content.design {
   position: relative;
 }
 
-.main-content.quality.design .addShadow {
+.main-content.design .addShadow {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-.main-content.quality.design:after {
+.main-content.design:after {
   content: "";
   background-image: url(../../assets/images/backgroundI.jpg);
   background-position: center bottom;
@@ -180,7 +180,7 @@
   z-index: -1;
   background-repeat: no-repeat;
   background-size: cover;
-  opacity: 0.15;
+  opacity: 0.10;
 }
 
 @media screen and (max-width: 1023px) {
