--- a/src/components/Quality/style.scss
+++ b/src/components/Quality/style.scss
@@ -1,5 +1,5 @@
 .quality .main-content__top {
-  background-image: url(https://t4.ftcdn.net/jpg/02/80/86/03/240_F_280860342_3PTQVC3VubEJN1xC4trD17gpnOcHZGWS.jpg);
+  background-image: url(../../assets/images/qualityBanner.jpg);
   background-position: center;
   -webkit-background-size: 100%;
   -webkit-background-size: cover;
@@ -145,7 +145,7 @@ overflow: initial;
 
 .main-content.quality.design:after {
   content: "";
-  background-image: url(https://image.freepik.com/free-vector/abstract-gear-wheel-mechanism-background_41981-300.jpg);
+  background-image: url(../../assets/images/backgroundI.jpg);
   background-position: center bottom;
   position: fixed;
   bottom: 0px;
