--- a/src/shared-components/Header/style.scss
+++ b/src/shared-components/Header/style.scss
@@ -193,9 +193,9 @@
     }
   }
   body .mainC .main-content {
-    margin-top: 61px;
+    // margin-top: 61px;
     &__top__title {
-      padding: 20px 0;
+      // padding: 20px 0;
       font-size: 22px;
       .description {
         font-size: 13px;
